samples/_failures_safe/1761670206_d5bd59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7cbab45.c: In function ‘main’:
./samples/SAFE/__tmp_b7cbab45.c:182:25: error: expected declaration or statement at end of input
  182 |                         }
      |                         ^
./samples/SAFE/__tmp_b7cbab45.c:182:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7cbab45.c:182:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7cbab45.c:182:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b7cbab45.c:182:25: error: expected declaration or statement at end of input
